--- a/gdal-config/osmconf.ini
+++ b/gdal-config/osmconf.ini
@@ -25,7 +25,7 @@ osm_user=no
 osm_changeset=no
 
 # keys to report as OGR fields
-attributes=aeroway,amenity,health_facility,highway,historic,leisure,man_made,int_name,name,name:en,place,religion,shop,tourism
+attributes=admin_centre,aeroway,amenity,health_facility,highway,historic,leisure,man_made,int_name,name,name:en,place,religion,shop,tourism
 # keys that, alone, are not significant enough to report a node as a OGR point
 unsignificant=created_by,converted_by,source,time,ele
 # keys that should NOT be reported in the "other_tags" field
@@ -43,7 +43,7 @@ osm_user=no
 osm_changeset=no
 
 # keys to report as OGR fields
-attributes=access,admin_level,aeroway,highway,int_name,name,name:en,oneway,railway,ref,service
+attributes=access,admin_level,aeroway,boundary,highway,inner,int_name,name,name:en,oneway,outer,railway,ref,service
 # keys that should NOT be reported in the "other_tags" field
 ignore=created_by,converted_by,source,time,ele,note,openGeoDB:,fixme,FIXME
 # uncomment to avoid creation of "other_tags" field
