--- a/gdal-config/osmconf.ini
+++ b/gdal-config/osmconf.ini
@@ -61,7 +61,7 @@ osm_user=no
 osm_changeset=no
 
 # keys to report as OGR fields
-attributes=aeroway,amenity,boundary,building,highway,landuse,leisure,military,int_name,name,name:en,natural,power,religion,tourism,water,waterway,wetland
+attributes=aeroway,amenity,building,highway,landuse,leisure,military,int_name,name,name:en,natural,power,religion,tourism,water,waterway,wetland
 # keys that should NOT be reported in the "other_tags" field
 ignore=area,created_by,converted_by,source,time,ele,note,openGeoDB:,fixme,FIXME
 # uncomment to avoid creation of "other_tags" field
