--- a/gdal-config/osmconf.ini
+++ b/gdal-config/osmconf.ini
@@ -25,7 +25,7 @@ osm_user=no
 osm_changeset=no
 
 # keys to report as OGR fields
-attributes=admin_centre,aeroway,amenity,health_facility,highway,historic,leisure,man_made,int_name,name,name:en,place,religion,shop,tourism
+attributes=aeroway,amenity,capital,health_facility,highway,historic,leisure,man_made,int_name,name,name:en,place,religion,shop,tourism
 # keys that, alone, are not significant enough to report a node as a OGR point
 unsignificant=created_by,converted_by,source,time,ele
 # keys that should NOT be reported in the "other_tags" field
